css/SceneStyle.css
html {
    font-family: verdana, helvetica, arial, sans-serif;
}

body {
    margin: 0;
    padding: 0;
    height: 100%;
    background: url('../img/colorado-lg.jpg') no-repeat fixed;
    background-size: cover;
    font-variant: small-caps;
}

a {
    text-decoration: none;
    color: black;
}

table * {
    padding: 0;
    margin: 0;
    border-spacing: 0;
}

#wrapper {
    min-height:100%;
    position:relative;
    margin: 0;
    padding: 0;
}

/*Header Start*/

#header {
    background: rgba(255,165,0,1);
	height: 58px;
	width: 950px;
    margin: auto;
    overflow: hidden;
}

#title {
	font-family: verdana,helvetica,arial,sans-serif;
    font-weight: bold;
    color: rgba(0,0,0,0.6);
    text-shadow:
        2px 2px 2px rgba(0,0,0,0.2),
        0px -5px 35px rgba(255,255,255,0.3);
	font-size: 48px;
    font-style: italic;
    font-variant: small-caps;
    float: left;
    margin-left: 5px;
}

#share {
    float: right;
    cursor: pointer;
}

#shareIcons {
    float: right;
    display: none;
}

#shareScroll {
    display: none;
    cursor: pointer;
    position: fixed;
    margin-left: 910px;
    z-index: 3;
    background: rgba(255,165,0,1);
}

#shareIconScroll {
    display: none;
    position: fixed;
    margin-left: 870px;
    z-index: 4;
}

/*Header end, Nav Bar Start*/

#navbar {
    width: 950px;
    background: rgba(255,165,0,1);
    margin: 0 auto;
    padding: 0;
    overflow: hidden;
}

#navbar ul {
    width: 950px;
    padding: 0px;
    height: 35px;
    margin: 0 0 0 105px;
}

#navbar ul li {
    padding: 7px 0px 9px 0px;
    width: 124px;
    border-right: 1px solid black;
    display: inline-block;
    text-align: center;
    font-variant: small-caps;
}

#navbar ul li:last-child {
    border-right: 0px;
}

#navbar ul li:hover {
    font-weight: bold;
    cursor: pointer;
}

#navbarScroll {
    display: none;
    position: fixed;
    width: 100%;
    margin: 0;
    top: 0;
    z-index: 2;
    overflow: hidden;
}

#navbarScroll ul {
    width: 950px;
    padding: 0px;
    height: 35px;
    margin: 0 auto;
    background: rgba(255,165,0,1);
}

#navbarScroll ul li {
    padding: 7px 0px 9px 0px;
    margin: 0px;
    width: 124px;
    border-right: 1px solid black;
    display: inline-block;
    text-align: center;
    font-variant: small-caps;
}

#navbarScroll ul li:last-child {
    border-right: 0px;
}

#navbarScroll ul li:first-child {
    margin-left: 105px;
}


#navbarScroll ul li:hover {
    font-weight: bold;
    cursor: pointer;
}

.bodywrap {
    width: 950px;
    margin: auto;
    background: rgba(255,255,255,0.5);
}
/*Nav Bar end Filter Start*/

@keyframes filterFocus{
    0% {
        margin-right: -380px;
    }
    70% {
        margin-right: 10px;
    }
    100% {
        margin-right: 0;
    }
}


@-webkit-keyframes filterFocus{
    0% {
        margin-right: -380px;
    }
    70% {
        margin-right: 10px;
    }
    100% {
        margin-right: 0;
    }
}

@-moz-keyframes filterFocus{
    0% {
        margin-right: -380px;
    }
    70% {
        margin-right: 10px;
    }
    100% {
        margin-right: 0;
    }
}

@-o-keyframes filterFocus{
    0% {
        margin-right: -380px;
    }
    70% {
        margin-right: 10px;
    }
    100% {
        margin-right: 0;
    }
}

#filter {
    border: 1px dashed black;
    border-top: none;
    border-right: none;
    z-index: 1;
    height: 108px;
    width: 120px;
    animation: filterFocus 1.5s 1;
    -webkit-animation: filterFocus 1s 1;
    -moz-animation: filterFocus 1s 1;
    -o-animation: filterFocus 1s 1;
    background-color: rgba(255,255,255,1);
    float: right;
}

#filter div {
    border-bottom: 1px dashed black;
    height: 35px;
    width: 120px;

}

#filter div div {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    width: 120px;
}

#filter div div:hover {
    background: #f2f2f2;
    cursor: pointer;
}

#filter div:last-child {
    border-bottom: 0px;
}

#filter div:hover {
    font-weight: bold;
}

#filterScroll {
    position: fixed;
    margin-left: 829px;
    background-color: rgba(255,255,255,1);
    z-index: 1;
    top: 35px;
    border: 1px dashed black;
    border-top: none;
    border-right: none;
    height: 108px;
    width: 120px;
    display: none;
}

#filterScroll div {
    border-bottom: 1px dashed black;
    height: 35px;
    width: 120px;

}

#filterScroll div div {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    width: 120px;
}

#filterScroll div div:hover {
    background: #f2f2f2;
    cursor: pointer;
}

#filterScroll div:last-child {
    border-bottom: 0px;
}

#filterScroll div:hover {
    font-weight: bold;
}

/*Filter end*/

.selected {
    font-weight: bold;
}

.selectedScroll {
    font-weight: bold;
}

#subheader {
    padding-top: 10px;
    margin-left: 5px;
    font-size: 24px;
    white-space: nowrap;
    font-style: italic;
    font-variant: small-caps;
}

.subtitle {
    font-weight: bold;
}

#catchPhrase {
    margin-left: 75px;
    font-size: 24px;
    font-style: italic;
    color: #7E7E7E;
    white-space: nowrap;
    margin-bottom: 20px;
}

#catchPhrase img {
    display: inline-block;
    margin-bottom: -20px;
    margin-left: -10px;
}

/* List of games... */

#GameList {
    width: 750px;
    margin: auto;
    padding-bottom: 190px;
}

.GameXfirst {
    width: 750px;
    height: 102px;
    margin: 0;
    -moz-box-shadow: inset 0 0 10px #000000;
    -webkit-box-shadow: inset 0 0 10px #000000;
    box-shadow: inset 0 0 10px #000000;
    background: #FFFFFF;
}

.GameX {
    width: 750px;
    height: 102px;
    margin: 40px 0px 0px 0px;
    -moz-box-shadow: inset 0 0 10px #000000;
    -webkit-box-shadow: inset 0 0 10px #000000;
    box-shadow: inset 0 0 10px #000000;
    background: #FFFFFF;
}

.sport {
    width: 245px;
    height: 100px;
    display: inline-table;
    text-align: center;
    font-size: 42px;
    font-style: italic;
    color: #7E7E7E;
    letter-spacing: 10px;
    border-right: 1px solid #7E7E7E;
}

.versus {
    width: 245px;
    height: 100px;
    display: inline-table;
    text-align: center;
    border-right: 1px solid #7E7E7E;
}

.date {
    width: 245px;
    height: 100px;
    display: inline-table;
    text-align: center;
}

.content {
    display: table-cell;
    vertical-align: middle;
}

/* List of games end, start Footer */

#footer {
    height: 75px;
    width: 100%;
    min-width: 1019px;
    position: absolute;
    bottom: 0;
    left: 0;
}

#footer div {
    margin: 0 auto;
    width: 950px;
    height: 75px;
    background: rgba(255,165,0,1);
}

.copywrite {
    margin: auto;
    font-size: 10px;
    text-align: center;
}
/* Footer end*/

/* test redesign */

.GameXtest {
    width: 680px;
    height: 155px;
    margin: 40px 0px 0px 0px;
    overflow: hidden;
}

.gamewrap {
    width: 603px;
    height: 150px;
    float: left;
    background: #ffffff;
}

.venuetest {
    width: 200px;
    height: 150px;
    display: inline-block;
    text-align: center;
    border-right: 1px solid black;
    font-size: 12px;
    float: left;
}

.venueCell {
    height: 101px;
    font-size: 20px;
    text-align: center;
}

.venueCell span {
    width: 100%;
    text-align: center;
}

.timeCell {
    height: 50px;
    font-size: 12px;
}

.venuetest table {
    border-spacing: 0;
}

.versustest {
    width: 200px;
    height: 150px;
    display: inline-block;
    text-align: center;
    border-right: 1px solid black;
    font-size: 12px;
    float: left;
    overflow: hidden;
}

.versustest table {
    width: 200px;
    height: 150px;
    margin: 0;
    padding: 0;
    border-spacing: 0px;
}

.versustest table tr td {
    vertical-align: middle;
    height: 50px;
    font-size: 26px;
}

.ribbonWrapper {
    position: absolute;
    overflow: hidden;
    width: 50px;
    height: 50px;
}

.label {
    width: 70px;
    height: 15px;
    position: relative;
    color: black;
    font-style: italic;
    text-align: center;
    -webkit-transform: rotate(-45deg);
    -moz-transform:    rotate(-45deg);
    -ms-transform:     rotate(-45deg);
    -o-transform:      rotate(-45deg);
    top: 10px;
    left: -17px;
    background-image: -webkit-linear-gradient(top,  #7E7E7E, #a4a4a4);
    background-image:    -moz-linear-gradient(top, #7E7E7E, #a4a4a4);
    background-image:     -ms-linear-gradient(top, #7E7E7E, #a4a4a4);
    background-image:      -o-linear-gradient(top, #7E7E7E, #a4a4a4);
}

.weathertest {
    width: 200px;
    height: 150px;
    display: inline-block;
    text-align: center;
    float: left;
    font-size: 12px;
}

.weathertest table {
    height: 150px;
    width: 200px;
    margin: 0;
    padding: 0;
    border-spacing: 0;
}

.weathertest table tr td {
    height: 50px;
}

.sporttest {
    width: 50px;
    height: 149px;
    display: inline-block;
    text-align: center;
    float: left;
    margin-left: 20px;
    background: #FFFFFF;
    border: 1px dashed #000000;
}

.sporttest table {
    height: 149px;
    width: 100%;
    border-spacing: 0;
}

.sporttest table tr td {
    height: 49px;
    border-bottom: 1px dashed #000000;
}

.sporttest table tr:last-child td {
    border-bottom: 0;
}

.sporttest table tr td img {
    height: 45px;
}

.sporttest table tr td:hover {
    background: #f2f2f2;
    cursor: pointer;
}

